examples/services/sidecar/flux-restful/google/ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: restful-service
spec:
  type: NodePort
  ports:
  - port: 5000
    nodePort: 30093
  selector:
    job-index: "0"
    job-name: flux-sample
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: restful-ingress
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: restful-service
            port: 
              number: 30093
